--- a/web/chart.html
+++ b/web/chart.html
@@ -5,6 +5,6 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
 <body style="height:100%;margin:0">
-	<canvas id="myChart" style="height : 100%"></canvas>
+	<canvas id="myChart" style="height : 100%;background-color : black"></canvas>
 </body>
 </html>
